; ModuleID = '/home/carl/AnghaBench/openssl/test/extr_sm2_internal_test.c_restore_rand.c'
source_filename = "/home/carl/AnghaBench/openssl/test/extr_sm2_internal_test.c_restore_rand.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@fake_rand_bytes = common dso_local global i32* null, align 8
@fake_rand_bytes_offset = common dso_local global i64 0, align 8
@saved_rand = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 ()* @restore_rand to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @restore_rand() #0 {
  %1 = alloca i32, align 4
  %2 = load i32*, i32** @fake_rand_bytes, align 8
  %3 = call i32 @OPENSSL_free(i32* %2)
  store i32* null, i32** @fake_rand_bytes, align 8
  store i64 0, i64* @fake_rand_bytes_offset, align 8
  %4 = load i32, i32* @saved_rand, align 4
  %5 = call i32 @RAND_set_rand_method(i32 %4)
  %6 = call i32 @TEST_true(i32 %5)
  %7 = icmp ne i32 %6, 0
  br i1 %7, label %9, label %8

8:                                                ; preds = %0
  store i32 0, i32* %1, align 4
  br label %10

9:                                                ; preds = %0
  store i32 1, i32* %1, align 4
  br label %10

10:                                               ; preds = %9, %8
  %11 = load i32, i32* %1, align 4
  ret i32 %11
}

declare dso_local i32 @OPENSSL_free(i32*) #1

declare dso_local i32 @TEST_true(i32) #1

declare dso_local i32 @RAND_set_rand_method(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
